src/main/java/org/example/utils/error/TableException.java
package org.example.utils.error;

public class TableException extends RuntimeException {
    public TableException(Throwable cause) {
        super(cause);
    }
}
